--- a/pom.xml
+++ b/pom.xml
@@ -47,11 +47,15 @@
             <artifactId>jackson-core</artifactId>
             <version>2.11.0.rc1</version>
         </dependency>
-
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.9.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.21</version>
         </dependency>
     </dependencies>
 
