--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
             <version>8.0.21</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>junit</groupId>
